--- a/src/main/metadata-au/pages/AccountContactInformation.page
+++ b/src/main/metadata-au/pages/AccountContactInformation.page
@@ -32,11 +32,11 @@
         <th>Mobile 1</th>       
             <td><apex:inputField value="{!accountList_details.Mobile__c}"/></td> 
             <td><apex:inputField value="{!accountList_details.Mobile_Status__c}"/></td>       
-            <td><apex:inputField value="{!accountList_details.Opt_In_SMS__c}"/></td>  
+            <td><apex:inputField value="{!accountList_details.Opt_In_SMS__c}" style="margin-left: 26px;"/></td>  
             <apex:outputPanel rendered="{!IF(marketDiscriminator !='NZ', True , False)}"> 
-            <td><apex:inputField value="{!accountList_details.FS_Opt_In_SMS__c}"/></td>  
+            <td><apex:inputField value="{!accountList_details.FS_Opt_In_SMS__c}" style="margin-left: 26px;"/></td>  
             </apex:outputPanel>      
-            <td><apex:inputField value="{!accountList_details.Preferred_Mobile_1__c}"/></td>
+            <td><apex:inputField value="{!accountList_details.Preferred_Mobile_1__c}" style="margin-left: 26px;"/></td>
             <td><apex:outputLink onclick="UserRedirect(); return false;">
                 {!accountList_details.SMS_Last_Modified_By__c}                             
                 </apex:outputLink>
@@ -63,11 +63,11 @@
         <th>Mobile 2</th>     
             <td><apex:inputField value="{!accountList_details.Mobile2__c}"/></td>  
             <td><apex:inputField value="{!accountList_details.SMS_MMS_IM_Status_2__c}"/></td>        
-            <td><apex:inputField value="{!accountList_details.Opt_In_SMS2__c}"/></td>  
+            <td><apex:inputField value="{!accountList_details.Opt_In_SMS2__c}" style="margin-left: 26px;"/></td>  
             <apex:outputPanel rendered="{!IF(marketDiscriminator !='NZ', True , False)}"> 
-            <td><apex:inputField value="{!accountList_details.FS_Opt_In_SMS2__c}"/></td> 
+            <td><apex:inputField value="{!accountList_details.FS_Opt_In_SMS2__c}" style="margin-left: 26px;"/></td> 
             </apex:outputPanel>       
-            <td><apex:inputField value="{!accountList_details.Preferred_Mobile_2__c}"/></td>
+            <td><apex:inputField value="{!accountList_details.Preferred_Mobile_2__c}" style="margin-left: 26px;"/></td>
             <td><apex:outputLink onclick="UserRedirect(); return false;">
                 {!accountList_details.SMS_Last_Modified_By2__c}</apex:outputLink>  
                 <apex:actionFunction name="callShowpopUp" action="{!showPopup}" rerender="tstpopup" immediate="true">
@@ -91,11 +91,11 @@
         <th>Home Phone 1</th>        
             <td><apex:inputField value="{!accountList_details.Individual_Home_Phone__c}"/></td> 
             <td><apex:inputField value="{!accountList_details.Individual_Home_Phone_Status__c}"/></td>   
-            <td><apex:inputField value="{!accountList_details.Opt_In_Home_Phone__c}"/></td>   
+            <td><apex:inputField value="{!accountList_details.Opt_In_Home_Phone__c}" style="margin-left: 26px;"/></td>   
             <apex:outputPanel rendered="{!IF(marketDiscriminator !='NZ', True , False)}"> 
-            <td><apex:inputField value="{!accountList_details.FS_Opt_In_Home_Phone__c}"/></td>  
+            <td><apex:inputField value="{!accountList_details.FS_Opt_In_Home_Phone__c}" style="margin-left: 26px;"/></td>  
             </apex:outputPanel>     
-            <td><apex:inputField value="{!accountList_details.Preferred_Home_Phone_1__c}"/></td>
+            <td><apex:inputField value="{!accountList_details.Preferred_Home_Phone_1__c}" style="margin-left: 26px;"/></td>
             <td><apex:outputLink onclick="UserRedirect(); return false;">
                 {!accountList_details.Home_Phone_Last_Modified_By__c}</apex:outputLink> 
                 <apex:actionFunction name="callShowpopUp" action="{!showPopup}" rerender="tstpopup" immediate="true">
@@ -119,12 +119,12 @@
         <th>Home Phone 2</th>        
             <td><apex:inputField value="{!accountList_details.Home_Phone_2__c}"/></td> 
             <td><apex:inputField value="{!accountList_details.Home_Phone_Status_2__c}"/></td>   
-            <td><apex:inputField value="{!accountList_details.Opt_In_Home_Phone2__c}"/></td>  
+            <td><apex:inputField value="{!accountList_details.Opt_In_Home_Phone2__c}" style="margin-left: 26px;"/></td>  
             <apex:outputPanel rendered="{!IF(marketDiscriminator !='NZ', True , False)}"> 
   
-            <td><apex:inputField value="{!accountList_details.FS_Opt_In_Home_Phone2__c}"/></td>  
+            <td><apex:inputField value="{!accountList_details.FS_Opt_In_Home_Phone2__c}" style="margin-left: 26px;"/></td>  
             </apex:outputPanel>           
-            <td><apex:inputField value="{!accountList_details.Preferred_Home_Phone_2__c}"/></td>
+            <td><apex:inputField value="{!accountList_details.Preferred_Home_Phone_2__c}" style="margin-left: 26px;"/></td>
             <td><apex:outputLink onclick="UserRedirect(); return false;">
                 {!accountList_details.Home_Phone_Last_Modified_By2__c}</apex:outputLink>
                 <apex:actionFunction name="callShowpopUp" action="{!showPopup}" rerender="tstpopup" immediate="true">
@@ -147,11 +147,11 @@
         <th>Work Phone 1</th>                
             <td><apex:inputField value="{!accountList_details.Work_Phone__c}"/></td> 
             <td><apex:inputField value="{!accountList_details.Work_Phone_Status__c}"/></td>   
-            <td><apex:inputField value="{!accountList_details.Opt_In_Work_Phone__c}"/></td>   
+            <td><apex:inputField value="{!accountList_details.Opt_In_Work_Phone__c}" style="margin-left: 26px;"/></td>   
             <apex:outputPanel rendered="{!IF(marketDiscriminator !='NZ', True , False)}"> 
-            <td><apex:inputField value="{!accountList_details.FS_Opt_In_Work_Phone__c}"/></td> 
+            <td><apex:inputField value="{!accountList_details.FS_Opt_In_Work_Phone__c}" style="margin-left: 26px;"/></td> 
             </apex:outputPanel>            
-            <td><apex:inputField value="{!accountList_details.Preferred_Work_Phone_1__c}"/></td>
+            <td><apex:inputField value="{!accountList_details.Preferred_Work_Phone_1__c}" style="margin-left: 26px;"/></td>
             <td><apex:outputLink onclick="UserRedirect(); return false;">
                 {!accountList_details.Work_Phone_Last_Modified_By__c}</apex:outputLink>
                 <apex:actionFunction name="callShowpopUp" action="{!showPopup}" rerender="tstpopup" immediate="true">
@@ -175,11 +175,11 @@
         <th>Work Phone 2</th>        
             <td><apex:inputField value="{!accountList_details.Phone}"/></td> 
             <td><apex:inputField value="{!accountList_details.Work_Phone_Status_2__c}"/></td>   
-            <td><apex:inputField value="{!accountList_details.Opt_In_Work_Phone2__c}"/></td>   
+            <td><apex:inputField value="{!accountList_details.Opt_In_Work_Phone2__c}" style="margin-left: 26px;"/></td>   
             <apex:outputPanel rendered="{!IF(marketDiscriminator !='NZ', True , False)}"> 
-            <td><apex:inputField value="{!accountList_details.FS_Opt_In_Work_Phone2__c}"/></td> 
+            <td><apex:inputField value="{!accountList_details.FS_Opt_In_Work_Phone2__c}" style="margin-left: 26px;"/></td> 
             </apex:outputPanel>            
-            <td><apex:inputField value="{!accountList_details.Preferred_Work_Phone_2__c}"/></td>
+            <td><apex:inputField value="{!accountList_details.Preferred_Work_Phone_2__c}" style="margin-left: 26px;"/></td>
             <td><apex:outputLink onclick="UserRedirect(); return false;">
                 {!accountList_details.Work_Phone_Last_Modified_By2__c}</apex:outputLink>
                 <apex:actionFunction name="callShowpopUp" action="{!showPopup}" rerender="tstpopup" immediate="true">
@@ -202,11 +202,11 @@
         <th>Email 1</th>        
             <td><apex:inputField value="{!accountList_details.Email__c}"/></td>           
             <td><apex:inputField value="{!accountList_details.Email_Status__c}"/></td>   
-            <td><apex:inputField value="{!accountList_details.Opt_In_Email__c}"/></td> 
+            <td><apex:inputField value="{!accountList_details.Opt_In_Email__c}" style="margin-left: 26px;"/></td> 
             <apex:outputPanel rendered="{!IF(marketDiscriminator !='NZ', True , False)}">   
-            <td><apex:inputField value="{!accountList_details.FS_Opt_In_Email__c}"/></td>  
+            <td><apex:inputField value="{!accountList_details.FS_Opt_In_Email__c}" style="margin-left: 26px;"/></td>  
             </apex:outputPanel>          
-            <td><apex:inputField value="{!accountList_details.Preferred_Email_1__c}"/></td>
+            <td><apex:inputField value="{!accountList_details.Preferred_Email_1__c}" style="margin-left: 26px;"/></td>
             <td><apex:outputLink onclick="UserRedirect(); return false;">
                 {!accountList_details.Email_Last_Modified_By__c}</apex:outputLink> 
                 <apex:actionFunction name="callShowpopUp" action="{!showPopup}" rerender="tstpopup" immediate="true">
@@ -229,11 +229,11 @@
         <th>Email 2</th>        
             <td><apex:inputField value="{!accountList_details.Email2__c}"/></td>                           
             <td><apex:inputField value="{!accountList_details.Email_Status_2__c}"/></td>   
-            <td><apex:inputField value="{!accountList_details.Opt_In_Email2__c}"/></td>
+            <td><apex:inputField value="{!accountList_details.Opt_In_Email2__c}" style="margin-left: 26px;"/></td>
             <apex:outputPanel rendered="{!IF(marketDiscriminator !='NZ', True , False)}">    
-            <td><apex:inputField value="{!accountList_details.FS_Opt_In_Email2__c}"/></td>
+            <td><apex:inputField value="{!accountList_details.FS_Opt_In_Email2__c}" style="margin-left: 26px;"/></td>
             </apex:outputPanel>            
-            <td><apex:inputField value="{!accountList_details.Preferred_Email_2__c}"/></td>
+            <td><apex:inputField value="{!accountList_details.Preferred_Email_2__c}" style="margin-left: 26px;"/></td>
             <td><apex:outputLink onclick="UserRedirect(); return false;">
                 {!accountList_details.Email_Last_Modified_By2__c}</apex:outputLink>
                 <apex:actionFunction name="callShowpopUp" action="{!showPopup}" rerender="tstpopup" immediate="true">
