--- a/src/main/metadata/pages/AddressSearchValidation.page
+++ b/src/main/metadata/pages/AddressSearchValidation.page
@@ -1,5 +1,5 @@
 <!-- Page: -->
-<apex:page standardController="Account" extensions="AddressSearchValidationController">
+<apex:page standardController="Account" extensions="AddressSearchValidationController" action="{!ValidateCurrentuserMarket}">
     
     <apex:pageMessages id="msgs" escape="False" /> 
     <apex:includeScript value="/support/console/20.0/integration.js"/>
@@ -28,29 +28,19 @@
             <apex:pageBlock mode="edit" title="{!$Label.New_Account_Information}"   >
                 <apex:actionFunction action="{!selectedRecordTypeValue}" name="setRecType"/>
                 <apex:pageBlockSection >
-                    
-                    
-                    
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Account.fields.RecordTypeId.Label}" />  
-                        
                         <apex:outputPanel styleClass="requiredInput" layout="block">
-                            
                             <apex:outputPanel styleClass="requiredBlock" layout="block"/>
-                            
                             <apex:selectList id="selectRecType" value="{!RecordType}" size="1" onchange="CallSetRecType()" required="true" >
-                                
                                 <apex:selectOption itemValue="Select" itemLabel="--Select--" />
                                 <apex:selectOption itemValue="Person Account" itemLabel="Person Account"/>
                                 <apex:selectOption itemValue="Company" itemLabel="Company"/>
-                                <apex:actionSupport event="onchange" reRender="companyBlock,PersonAccBlock,Savebtn"   />
+                                <apex:actionSupport event="onchange" reRender="companyBlock,PersonAccBlock,Savebtn"/>
                             </apex:selectList>
-                        </apex:outputPanel>                    
-                        
+                        </apex:outputPanel>  
                     </apex:pageBlockSectionItem>
                 </apex:pageBlockSection>
-                
-                
                 
                 <apex:pageBlockSection id="companyBlock" title="{!$Label.Company_Account_Information}" rendered="{!If(RecordType == 'Company' ,true,false)}" >
                     <apex:pageBlockSectionItem >
@@ -66,57 +56,47 @@
                     <apex:inputField value="{!objAccount.Company_Legal_Form__c}" />
                     <apex:inputField value="{!objAccount.Legal_Form_Position__c}" />
                     <apex:inputField value="{!objAccount.Individual_Home_Phone__c}" />
-                    <apex:inputField value="{!objAccount.Mobile__c}" />
+                    <apex:inputField value="{!objAccount.Mobile__c}"/>
                     <apex:inputField value="{!objAccount.Work_Phone__c}" />
                     <apex:inputField value="{!objAccount.Mobile2__c}" />
                     <apex:inputField value="{!objAccount.Home_Phone_2__c}" />
                     <apex:inputField value="{!objAccount.Phone}" />
                     <apex:inputField value="{!objAccount.Email__c}" />
-                    <apex:inputField value="{!objAccount.Email2__c}" />
-                    
+                    <apex:inputField value="{!objAccount.Email2__c}" />                     
+                    <apex:inputField value="{!objPersonAccount.Data_Source__c}" rendered="{!If(UserMarket=='KR',true,false)}"/>                
                 </apex:pageBlockSection>
                 
                 
                 <apex:pageBlockSection id="PersonAccBlock" title="{!$Label.Person_Account_Information}" rendered="{!If(RecordType == 'Person Account' ,true,false)}">                
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Account.fields.LastName.Label}"/>
-                        <apex:outputPanel styleClass="requiredInput" layout="block">
-                            
+                        <apex:outputPanel styleClass="requiredInput" layout="block">                            
                             <apex:outputPanel styleClass="requiredBlock" layout="block"/>
                             <apex:inputText value="{!objPersonAccount.LastName}" />
                         </apex:outputPanel> 
                     </apex:pageBlockSectionItem>                
-                    <apex:pageBlockSectionItem >
-                        
+                    <apex:pageBlockSectionItem >                        
                         <apex:outputLabel value="{!$ObjectType.Account.fields.FirstName.Label}"/>
-                        <apex:inputText value="{!objPersonAccount.FirstName}" />
-                        
-                    </apex:pageBlockSectionItem> 
-                    <!--  <apex:inputField value="{!objPersonAccount.LastName}" />
-<apex:inputField value="{!objPersonAccount.FirstName}" /> -->
+                        <apex:inputText value="{!objPersonAccount.FirstName}" />                        
+                    </apex:pageBlockSectionItem>           
                     <apex:inputField value="{!objPersonAccount.LastName_Native_1__c}" />
                     <apex:inputField value="{!objPersonAccount.FirstName_Native_1__c}" />                     
                     <apex:inputField value="{!objPersonAccount.Individual_Home_Phone__c}" />
-                    <apex:inputField value="{!objPersonAccount.Mobile__c}" />
+                    <apex:inputField value="{!objPersonAccount.Mobile__c}"/>
                     <apex:inputField value="{!objPersonAccount.Work_Phone__c}" />
                     <apex:inputField value="{!objPersonAccount.Mobile2__c}" />
                     <apex:inputField value="{!objPersonAccount.Home_Phone_2__c}" />
                     <apex:inputField value="{!objPersonAccount.Phone}" />
                     <apex:inputField value="{!objPersonAccount.Email__c}" />
-                    <apex:inputField value="{!objPersonAccount.Email2__c}" />
-                    <apex:inputField value="{!objPersonAccount.PersonBirthdate}" />
-                    
-                    
+                    <apex:inputField value="{!objPersonAccount.Email2__c}" />                    
+                   <!-- <apex:inputField value="{!objPersonAccount.PersonBirthdate}" required="true"/> -->
+                    <apex:inputField value="{!objPersonAccount.Data_Source__c}" rendered="{!If(UserMarket=='KR',true,false)}"/>                
                 </apex:pageBlockSection>
                 
-                
                 <apex:pageBlockSection title="{!$Label.Address_Information}" >
-                    
                     <apex:pageBlockSectionItem >
                         <apex:outputLabel value="{!$ObjectType.Address__c.fields.Address_Type__c.Label}"/>
                         <apex:inputField value="{!AddressObj.Address_Type__c}"/>
-                        
-                        
                     </apex:pageBlockSectionItem>
                     
                     <apex:pageBlockSectionItem >
@@ -199,21 +179,11 @@
                             var showTabId = function showTabId(result) {
                                 // Display the tab ID
                                 
-                                var subtabId = result.id;
-                                
-                                
+                                var subtabId = result.id;  
                                 sforce.console.refreshPrimaryTabById(subtabId, true);
-                                 sforce.console.focusPrimaryTabById(subtabId);
-                                
-
+                                sforce.console.focusPrimaryTabById(subtabId);
                             };
-                            
-                            
-                            testGetFocusedSubtabId();
-                            
-                                                        
-                            
-                            
+                            testGetFocusedSubtabId();                            
                             </script>                     
                         </apex:outputText> 
                     </apex:outputPanel>
