--- a/src/main/metadata/pages/ContactTable.page
+++ b/src/main/metadata/pages/ContactTable.page
@@ -50,7 +50,7 @@
                        <td><apex:outputField value="{!ParAcc.SMS_Last_Modified_Date__c}"/></td>    
                    </tr>
                    
-                   <tr>        
+                <!--   <tr>        
                        <th style="text-align: Right;">{!$Label.Work_Mobile}</th>     
                        <td><apex:inputField value="{!ParAcc.Mobile2__c}" rendered="{!editMode}"/>
                           <apex:outputPanel rendered="{!!editMode}"> <a href="javascript:sforce.console.cti.sendCTIMessage('/CLICK_TO_DIAL?DN='+encodeURIComponent('{!ParAcc.Mobile2__c}')+'&ID={!ParAcc.Id}&ENTITY_NAME=Account');
@@ -64,7 +64,7 @@
                                                
                        </td>                  
                        <td><apex:outputField value="{!ParAcc.SMS_Last_Modified_Date2__c}"/></td>        
-                   </tr>
+                   </tr>-->
                    
                    <tr>        
                        <th style="text-align: Right;">{!$Label.Home_Phone}</th>        
@@ -83,7 +83,7 @@
                        <td><apex:outputField value="{!ParAcc.Home_Phone_Last_Modified_Date__c}"/></td>            
                    </tr>
                    
-                   <tr>        
+                 <!--  <tr>        
                        <th style="text-align: Right;">{!$Label.Other_Phone_1}</th>        
                        <td><apex:inputField value="{!ParAcc.Home_Phone_2__c}" rendered="{!editMode}" />
                        <apex:outputPanel rendered="{!!editMode}"> <a href="javascript:sforce.console.cti.sendCTIMessage('/CLICK_TO_DIAL?DN='+encodeURIComponent('{!ParAcc.Home_Phone_2__c}')+'&ID={!ParAcc.Id}&ENTITY_NAME=Account');
@@ -97,7 +97,7 @@
                                                
                        </td>      
                        <td><apex:outputField value="{!ParAcc.Home_Phone_Last_Modified_Date2__c}"/></td>       
-                   </tr>
+                   </tr>-->
                    
                    <tr>        
                        <th style="text-align: Right;">{!$Label.Work_Phone} </th>                
@@ -115,7 +115,7 @@
                        <td><apex:outputField value="{!ParAcc.Work_Phone_Last_Modified_Date__c}"/></td>       
                    </tr>
                    
-                   <tr>        
+                 <!--  <tr>        
                        <th style="text-align: Right;">{!$Label.Other_Phone_2}</th>        
                        <td><apex:inputField value="{!ParAcc.Phone}" rendered="{!editMode}" />
                        <apex:outputPanel rendered="{!!editMode}"> <a href="javascript:sforce.console.cti.sendCTIMessage('/CLICK_TO_DIAL?DN='+encodeURIComponent('{!ParAcc.Phone}')+'&ID={!ParAcc.Id}&ENTITY_NAME=Account');
@@ -129,9 +129,9 @@
                                                
                        </td>         
                        <td><apex:outputField value="{!ParAcc.Work_Phone_Last_Modified_Date2__c}"/></td>              
-                   </tr>
+                   </tr> -->
                    
-                   <tr>        
+                  <!-- <tr>        
                        <th style="text-align: Right;">{!$Label.Home_Email}</th>        
                        <td><apex:inputField value="{!ParAcc.Email__c}" rendered="{!editMode}" />
                            <apex:outputField value="{!ParAcc.Email__c}" rendered="{!!editMode}" />
@@ -143,8 +143,20 @@
                                                
                        </td>         
                        <td><apex:outputField value="{!ParAcc.Email_Last_Modified_Date__c}"/></td>  
-                   </tr>
-                   
+                   </tr> -->
+                    <tr>        
+                       <th style="text-align: Right;">{!$Label.Business_Email}</th>        
+                       <td><apex:inputField value="{!ParAcc.Email__c}"  rendered="{!editMode}"/>
+                           <apex:outputField value="{!ParAcc.Email__c}"  rendered="{!!editMode}"/>
+                       </td>                           
+                       <td><apex:inputField value="{!ParAcc.Email_Status__c}" rendered="{!editMode}"/>
+                           <apex:outputField value="{!ParAcc.Email_Status__c}" rendered="{!!editMode}"/>
+                       </td>   
+                       <td><apex:outputField value="{!ParAcc.Email_Last_Modified_By__c}" />
+                                               
+                       </td>      
+                       <td><apex:outputField value="{!ParAcc.Email_Last_Modified_Date__c}"/></td>        
+                   </tr> 
                    <tr>        
                        <th style="text-align: Right;">{!$Label.Business_Email}</th>        
                        <td><apex:inputField value="{!ParAcc.Email2__c}"  rendered="{!editMode}"/>
@@ -159,7 +171,7 @@
                        <td><apex:outputField value="{!ParAcc.Email_Last_Modified_Date2__c}"/></td>        
                    </tr> 
                    
-                   <tr>        
+                   <!--<tr>        
                        <th style="text-align: Right;">{!$Label.Other_Email}</th>        
                        <td><apex:inputField value="{!ParAcc.Email3__c}" rendered="{!editMode}"/>
                            <apex:outputField value="{!ParAcc.Email3__c}" rendered="{!!editMode}"/>
@@ -171,7 +183,7 @@
                                                
                        </td>    
                        <td><apex:outputField value="{!ParAcc.Email_Last_Modified_Date3__c}"/></td>        
-                   </tr> 
+                   </tr> --> 
                    
                    <tr>        
                        <th style="text-align: Right;">{!$Label.Fax}</th>        
@@ -188,7 +200,7 @@
                        
                    </tr> 
                    
-                   <tr>        
+                 <!--  <tr>        
                        <th style="text-align: Right;">{!$Label.Work_Fax}</th>        
                        <td><apex:inputField value="{!ParAcc.Fax2__c}" rendered="{!editMode}" />
                            <apex:outputField value="{!ParAcc.Fax2__c}" rendered="{!!editMode}" />
@@ -198,7 +210,7 @@
                        </td>   
                        <td></td>
                        <td></td>
-                   </tr> 
+                   </tr>  -->
                </table>    
                
                <apex:pageBlockButtons location="bottom" style="align:left;"  >
